FINALPROJECT/NEWWORKSPACE/.metadata/.plugins/org.eclipse.cdt.ui/lastchance.build.log
13:46:57 **** Build of configuration Debug for project lastchance ****
make all 
'Building file: ../src/lw_usb/HID.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/HID.o" -IC:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/HID.d" -MT"src/lw_usb/HID.o" -o "src/lw_usb/HID.o" "../src/lw_usb/HID.c"
../src/lw_usb/HID.c:10:1: warning: braces around scalar initializer
   10 | HID_DEVICE hid_device = { { 0 } };
      | ^~~~~~~~~~
../src/lw_usb/HID.c:10:1: note: (near initialization for 'hid_device.addr')
'Finished building: ../src/lw_usb/HID.c'
' '
'Building file: ../src/lw_usb/MAX3421E.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/MAX3421E.o" -IC:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/MAX3421E.d" -MT"src/lw_usb/MAX3421E.o" -o "src/lw_usb/MAX3421E.o" "../src/lw_usb/MAX3421E.c"
In file included from C:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:303,
                 from ../src/lw_usb/MAX3421E.c:14:
../src/lw_usb/MAX3421E.c: In function 'SPI_init':
C:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xstatus.h:44:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   44 | #define XST_DEVICE_NOT_FOUND            2L
      |                                         ^~
../src/lw_usb/MAX3421E.c:40:24: note: in expansion of macro 'XST_DEVICE_NOT_FOUND'
   40 |                 return XST_DEVICE_NOT_FOUND;
      |                        ^~~~~~~~~~~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init()
      |      ^~~~~~~~
In file included from C:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:303,
                 from ../src/lw_usb/MAX3421E.c:14:
C:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xstatus.h:43:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   43 | #define XST_FAILURE                     1L
      |                                         ^~
../src/lw_usb/MAX3421E.c:47:24: note: in expansion of macro 'XST_FAILURE'
   47 |                 return XST_FAILURE;
      |                        ^~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init()
      |      ^~~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MAX3421E_Task':
../src/lw_usb/MAX3421E.c:362:46: warning: suggest parentheses around comparison in operand of '&' [-Wparentheses]
  362 |         if (XGpio_DiscreteRead(&Gpio_int, 1) & 0x01 == 0)
      |                                              ^
../src/lw_usb/MAX3421E.c: In function 'MaxGpxHandler':
../src/lw_usb/MAX3421E.c:404:14: warning: variable 'GPINIRQ' set but not used [-Wunused-but-set-variable]
  404 |         BYTE GPINIRQ;
      |              ^~~~~~~
'Finished building: ../src/lw_usb/MAX3421E.c'
' '
'Building file: ../src/lw_usb/transfer.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/transfer.o" -IC:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/transfer.d" -MT"src/lw_usb/transfer.o" -o "src/lw_usb/transfer.o" "../src/lw_usb/transfer.c"
../src/lw_usb/transfer.c:14:1: warning: braces around scalar initializer
   14 | EP_RECORD dev0ep = {{ 0 }};         //Endpoint data structure for uninitialized device during enumeration
      | ^~~~~~~~~
../src/lw_usb/transfer.c:14:1: note: (near initialization for 'dev0ep.epAddr')
../src/lw_usb/transfer.c: In function 'XferInTransfer':
../src/lw_usb/transfer.c:200:7: warning: unused variable 'tmpbyte' [-Wunused-variable]
  200 |  BYTE tmpbyte;
      |       ^~~~~~~
../src/lw_usb/transfer.c:199:7: warning: unused variable 'i' [-Wunused-variable]
  199 |  BYTE i;
      |       ^
'Finished building: ../src/lw_usb/transfer.c'
' '
'Building file: ../src/lw_usb_main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb_main.o" -IC:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb_main.d" -MT"src/lw_usb_main.o" -o "src/lw_usb_main.o" "../src/lw_usb_main.c"
In file included from C:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xgpio.h:114,
                 from ../src/lw_usb_main.c:3:
C:/Users/nkubi/385FINAL/FINALPROJECT/NEWWORKSPACE/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xil_types.h:53:25: error: expected identifier before numeric constant
   53 | #  define FALSE         0U
      |                         ^~
../src/lw_usb/GenericTypeDefs.h:7:9: note: in expansion of macro 'FALSE'
    7 |         FALSE = 0, TRUE
      |         ^~~~~
make: *** [src/subdir.mk:23: src/lw_usb_main.o] Error 1

13:46:58 Build Finished (took 945ms)

